--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,7 @@
   "dependencies": {
     "@koa/router": "^8.0.8",
     "koa": "^2.11.0",
+    "koa-logger": "^3.2.1",
     "koa-static": "^5.0.0"
   }
 }
